--- a/Proyecto-10/index.html
+++ b/Proyecto-10/index.html
@@ -10,6 +10,14 @@
     <title>Proyect-10</title>
 </head>
 <body>
+
+    <main>
+        <h1>Proyect-10</h1>
+        <p>Proyecto-10</p>
+        <p>
+        Este es un proyecto nuevo 
+        </p>
+    </main>
     
 </body>
 </html>
