--- a/Proyecto-10/index.html
+++ b/Proyecto-10/index.html
@@ -21,7 +21,7 @@
     </h1>
 
     <form action="" class="layout__search">
-        <input type="search" class="search__input" placeholder="Busca tu Hotel">
+        <input type="search" class="search__input" placeholder="Buscar Hoteles Premium">
         <button class="search__btn">
             <i class="fa-solid fa-magnifying-glass"></i>
         </button>
