--- a/Proyecto-10/index.html
+++ b/Proyecto-10/index.html
@@ -34,8 +34,9 @@
         </article>
 
         <article class="results__result">
-            <p class="result__subtitle">Calle:</p>
-            <h3 class="result__title">Ave: Garza Sada </h3>
+            <p class="result__subtitle">Ubicación:</p>
+            <h3 class="result__title">Av. Eugenio Garza Sada
+            </h3>
         </article>
         
         <article class="results__result">
@@ -43,10 +44,9 @@
             <h3 class="result__title">20-Abril-2024</h3>
         </article>
     </main>
-    <br>
 
     <section class="layout__map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.1897150375294!2d-100.2799646!3d25.6318283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bfa23fabb86f%3A0xeb6e2b44862e5e2d!2sAv.%20Eugenio%20Garza%20Sada%2C%20Contry%2C%20Monterrey%2C%20N.L.!5e0!3m2!1ses-419!2smx!4v1713825008502!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map__frame"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.1897150375294!2d-100.2799646!3d25.6318283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bfa23fabb86f%3A0xeb6e2b44862e5e2d!2sAv.%20Eugenio%20Garza%20Sada%2C%20Contry%2C%20Monterrey%2C%20N.L.!5e0!3m2!1ses-419!2smx!4v1713825008502!5m2!1ses-419!2smx" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map__frame"></iframe>
 
     </section>
 
