--- a/Proyecto-10/index.html
+++ b/Proyecto-10/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,43 +13,48 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Busca Hotel</title>
 </head>
+
 <body>
     <div class="layout">
 
-    <h1 class="layout__title">
-        Busca tu Hotel
-    </h1>
+        <h1 class="layout__title">
+            Busca tu Hotel
+        </h1>
 
-    <form action="" class="layout__search">
-        <input type="search" class="search__input" placeholder="Buscar Hoteles Premium">
-        <button class="search__btn">
-            <i class="fa-solid fa-magnifying-glass"></i>
-        </button>
-    </form>
+        <form action="" class="layout__search">
+            <input type="search" class="search__input" placeholder="Buscar Hoteles Premium">
+            <button class="search__btn">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+        </form>
 
-    <main class="layout__results">
-        <article class="results__result">
-            <p class="result__subtitle">Nombre:</p>
-            <h3 class="result__title">Hotel del Sol</h3>
-        </article>
+        <main class="layout__results">
+            <article class="results__result">
+                <p class="result__subtitle">Nombre:</p>
+                <h3 class="result__title">Hotel del Sol</h3>
+            </article>
 
-        <article class="results__result">
-            <p class="result__subtitle">Ubicación:</p>
-            <h3 class="result__title">Av. Eugenio Garza Sada
-            </h3>
-        </article>
-        
-        <article class="results__result">
-            <p class="result__subtitle">Fecha:</p>
-            <h3 class="result__title">20-Abril-2024</h3>
-        </article>
-    </main>
+            <article class="results__result">
+                <p class="result__subtitle">Ubicación:</p>
+                <h3 class="result__title">Av. Eugenio Garza Sada
+                </h3>
+            </article>
 
-    <section class="layout__map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.1897150375294!2d-100.2799646!3d25.6318283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bfa23fabb86f%3A0xeb6e2b44862e5e2d!2sAv.%20Eugenio%20Garza%20Sada%2C%20Contry%2C%20Monterrey%2C%20N.L.!5e0!3m2!1ses-419!2smx!4v1713825008502!5m2!1ses-419!2smx" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map__frame"></iframe>
+            <article class="results__result">
+                <p class="result__subtitle">Fecha:</p>
+                <h3 class="result__title">20-Abril-2024</h3>
+            </article>
+        </main>
 
-    </section>
+        <section class="layout__map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.1897150375294!2d-100.2799646!3d25.6318283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bfa23fabb86f%3A0xeb6e2b44862e5e2d!2sAv.%20Eugenio%20Garza%20Sada%2C%20Contry%2C%20Monterrey%2C%20N.L.!5e0!3m2!1ses-419!2smx!4v1713825008502!5m2!1ses-419!2smx"
+                width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade" class="map__frame"></iframe>
+
+        </section>
 
     </div>
 </body>
+
 </html>
