--- a/Proyecto-10/index.html
+++ b/Proyecto-10/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/fonts/fontawesome-free-6.5.1-web/css/all.min.css" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Busca Hotel</title>
+    <title>Buscar Hotel</title>
 </head>
 
 <body>
