--- a/Proyecto-12/index.html
+++ b/Proyecto-12/index.html
@@ -29,9 +29,9 @@
             <div class="title__text">
                 <span class="title__rotate">
                     Cursos desde 0 <br>
-                    Paso a Paso <br>
                     Sin conocimientos previos <br>
-                    Espero que disfrutes de este curso!
+                    Con lo mejores tutoriales <br>
+                    Espero que disfrutes de este curso!<br>
                 </span>
 
             </div>
