--- a/Proyecto-14/index.html
+++ b/Proyecto-14/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto-14</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <title>Crono</title>
 </head>
-<body>
-    
+
+    <div class="layout">
+        <main class="layout__main">
+
+            <!--Crono-->
+            <section class="main__container">
+                <div class="main__crono">
+                    <time class="crono__time" id="crono">00:00:00</time>
+
+                    <div class="crono__btns">
+                        <span class="btn__start" >Start</span>
+                        <span class="btn__stop" >Stop</span>
+                        <span class="btn__reset">Reset</span>
+                    </div>
+                </div>
+
+            </section>
+        </main>
+    </div>
+
+    <!---Navegation-->
+
+    <nav class="main__nav">
+        <span class="nav__item">Crono</span>
+        <span class="nav__item">Time</span>
+        <span class="nav__item">Alarma</span>
+    </nav>
+
+
 </body>
+
 </html>
