--- a/Proyecto-14/index.html
+++ b/Proyecto-14/index.html
@@ -14,34 +14,34 @@
     <title>Crono</title>
 </head>
 
+<body>
     <div class="layout">
-        <main class="layout__main">
 
+        <main class="layout__main">
             <!--Crono-->
             <section class="main__container">
                 <div class="main__crono">
-                    <time class="crono__time" id="crono">00:00:00</time>
+                    <time class="crono__time">00:00:00</time>
 
                     <div class="crono__btns">
-                        <span class="btn__start" >Start</span>
-                        <span class="btn__stop" >Stop</span>
-                        <span class="btn__reset">Reset</span>
+                        <span class="crono__btn">Start</span>
+                        <span class="crono__btn">Stop</span>
+                        <span class="crono__btn">Reset</span>
                     </div>
                 </div>
 
             </section>
+
+            <!---Navegation-->
+
+            <nav class="main__nav">
+                <span class="nav__item">Crono</span>
+                <span class="nav__item">Time</span>
+                <span class="nav__item">Alarma</span>
+            </nav>
+
         </main>
     </div>
-
-    <!---Navegation-->
-
-    <nav class="main__nav">
-        <span class="nav__item">Crono</span>
-        <span class="nav__item">Time</span>
-        <span class="nav__item">Alarma</span>
-    </nav>
-
-
 </body>
 
 </html>
