--- a/Proyecto-14/index.html
+++ b/Proyecto-14/index.html
@@ -24,9 +24,9 @@
                     <time class="crono__time">00:00:00</time>
 
                     <div class="crono__btns">
-                        <span class="crono__btn">Start</span>
-                        <span class="crono__btn">Stop</span>
-                        <span class="crono__btn">Reset</span>
+                        <span class="crono__start">Start</span>
+                        <span class="crono__stop">Stop</span>
+                        <span class="crono__reset">Reset</span>
                     </div>
                 </div>
 
@@ -37,7 +37,7 @@
             <nav class="main__nav">
                 <span class="nav__item">Crono</span>
                 <span class="nav__item">Time</span>
-                <span class="nav__item">Alarma</span>
+                <span class="nav__item">Alarm</span>
             </nav>
 
         </main>
