--- a/Proyecto-23/index.html
+++ b/Proyecto-23/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/reset.css">
+    <link rel="stylesheet" href="./assets/styles.css">
     <title>Proyecto-23</title>
 </head>
 <body>
+
+    <div class="layout">
+
+        <section class="layout__buttons">
+            <div class="buttons__container">
+                <button class="buttons__btn1">
+                    Mirame
+                </button>
+            </div>
+            <div class="buttons__container">
+                <button class="buttons__btn2">
+                    Mirame
+                </button>
+            </div>
+        </section>
+    </div>
     
 </body>
 </html
