--- a/Proyecto-23/index.html
+++ b/Proyecto-23/index.html
@@ -14,12 +14,12 @@
         <section class="layout__buttons">
             <div class="buttons__container">
                 <button class="buttons__btn1">
-                    Mirame
+                    Button 1
                 </button>
             </div>
             <div class="buttons__container">
                 <button class="buttons__btn2">
-                    Mirame
+                    Button 2
                 </button>
             </div>
         </section>
