--- a/Proyecto-24/index.html
+++ b/Proyecto-24/index.html
@@ -1,17 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/styles.css">
     <title>Proyecto-24</title>
 </head>
+
 <body>
 
-    <main class="layout">
-        <h1 class="layout__title">Proyecto 24</h1>
-    </main>
-    
+    <div class="layout">
+        
+        <main class="layout__main">
+
+            <section class="main__left">
+                <ol class="main__steps">
+                    <li class="steps__item">
+                        <div class="steps__container-number">
+                            <span class="steps__number">1</span>
+                        </div>
+                        <div class="steps__content">
+                            <span class="steps__title">Paso</span>
+                            <span class="steps__description">Crea una cuenta</span>
+                        </div>
+
+                        <div class="steps__container-number">
+                            <span class="steps__number">2</span>
+                        </div>
+                        <div class="steps__content">
+                            <span class="steps__title">Paso 2</span>
+                            <span class="steps__description">Dirección</span>
+                        </div>
+                        <div class="steps__container-number">
+                            <span class="steps__number">3</span>
+                        </div>
+                        <div class="steps__content">
+                            <span class="steps__title">Paso 3</span>
+                            <span class="steps__description">Forma de Pago</span>
+                            <div class="steps__container-number">
+                                <span class="steps__number">4</span>
+                            </div>
+                            <div class="steps__content">
+                                <span class="steps__title">Paso 4</span>
+                                <span class="steps__description">Confirmación</span>
+                            </div>
+                        </div>
+                    </li>
+                </ol>
+            </section>
+
+            <section class="main__right">
+
+                <header class="main__header">
+                    <h1 class="header__title">Registro</h1>
+                    <p class="header__subtitle">Crea tu cuenta para poder seguir con la compra</p>
+                </header>
+
+                <form class="main__form">
+                    <div class="form__control">
+                        <label class="form__label">Nombre</label>
+                        <input class="form__input" type="text" name="name" id="name" placeholder="Introduce tu Nombre">
+                    </div>
+                    <div class="form__control">
+                        <label class="form__label">Apellidos</label>
+                        <input class="form__input" type="text" name="subname" id="subname" placeholder="Introduce tu Apellido">
+                    </div>
+                    <div class="form__control">
+                        <label class="form__label">Email</label>
+                        <input class="form__input" type="mail" name="email" id="email" placeholder="Introduce tu Email">
+                    </div>
+                    <div class="form__control">
+                        <label class="form__label">Fecha de Nacimiento</label>
+                        <input class="form__input" type="date" name="fecha" id="fecha">       
+                    </div>
+                    <div class="form__control">
+                        <label class="form__label">Contraseña</label>
+                        <input class="form__input" type="password" name="password" id="password" placeholder="Introduce tu Contraseña">
+                </form>
+                <br>
+                <button class="buttton__btn">Siguiente</button>
+            </section>
+        </main>
+    </div>
+
 </body>
+
 </html>
