--- a/Proyecto-25/index.html
+++ b/Proyecto-25/index.html
@@ -34,8 +34,8 @@
         <article class="layout__article layout__article--3">
             <img class="article__img" src="./img/foto-3.jpg" alt="Imagen">
             <div class="article__overlay">
-                <h1 class="article__title">Foto de una Tienda</h1>
-                <p class="article__des">Mira la foto de la tienda</p>
+                <h1 class="article__title">Foto de una tienda especial</h1>
+                <p class="article__des">Puedes encontrar muchos productos </p>
             </div>
         </article>
     </main>
